# Chess-Computer-vision-analysis

./: .gitignore  README.md  all_my_detections_with_labels.csv  confidence_graphing.py  detection_percent.py  graphing.py  interface.py  main.py  pyproject.toml  test_data_detections_with_labels.csv  yolo_training.py
chessyolo/: main.py  pyproject.toml
my_inference_outputs/fine_tuning_20250603/threshold_0.5/: fine_tuning_detection_percent.csv  fine_tuning_inference_observations_6-11-25.md  fine_tuning_test_data_detections_with_labels.csv
my_inference_outputs/my_inference_outputs_20250603_1929262/threshold_0.5/: detection_percent.csv  test_data_detections_with_labels.csv
my_inference_outputs/predictions_set1_threshold0.2/labels/: OIP.txt
my_inference_outputs/predictions_set1_threshold0.5/labels/: close_up_board.txt
my_inference_outputs/predictions_set1_threshold0.8/labels/: close_up_board.txt
my_inference_outputs/predictions_set1_threshold_0.2/labels/: close_up_board.txt  qg_closeup.txt
my_inference_outputs/predictions_set1_threshold_0.5/labels/: OIP.txt  close_up_board.txt  qg_closeup.txt  seventh_seal.txt
my_inference_outputs/predictions_set1_threshold_0.8/labels/: qg_closeup.txt
my_inference_outputs_20250603_1929262/: test_data_detections_with_labels.csv
my_inference_outputs_20250603_1929262/threshold_0.5/labels/: 1.txt  11.txt  13.txt  16.txt  18.txt  2.txt  20.txt  3.txt  4.txt  5.txt  7.txt
runs/detect/fine_tune_yolo_run_20250603_1929262/: args.yaml  (+2 more)
testing/: cuda_testing2.py  directory_test.py  testing_notes.md  torch_cuda.py  torch_testing.py
(+50 files in other folders)
