[project]
name = "chess-computer-vision-analysis"
version = "0.1.0"
description = "A chess computer vision analysis tool for detecting and analyzing chess pieces on a board."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "ultralytics>=8.3.145",
]
